--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,3 +13,23 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+div.goalsList .points {
+    padding: 1px;
+    border-radius: 3px;
+    /*background: #61dafb;*/
+    color: #61dafb;
+}
+
+div.goalsList .goal-row {
+    /*padding: 1px;*/
+    padding: 2px 5px;
+    border: 1px solid #61dafb;
+    border-color: silver;
+    margin: 3px 0px;
+    border-radius: 5px;
+    border-right: 0px;
+    /*border-radius: 3px;*/
+    /*background: #61dafb;*/
+    /*color: #61dafb;*/
+}
